--- a/src/main/resources/templates/ShoppingCart.html
+++ b/src/main/resources/templates/ShoppingCart.html
@@ -3,6 +3,7 @@
     <head>
         <title>Shopping Cart</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
         <h1 style="margin: 50px">Shopping Cart</h1>
