--- a/src/main/resources/templates/VendorCreate.html
+++ b/src/main/resources/templates/VendorCreate.html
@@ -16,13 +16,11 @@
         <div style="margin: 50px">
             <h2>Create Book</h2>
 
-            <table style="width: 100%">
-                <tbody style="width: 100%">
+            <table>
+                <tbody>
                     <tr>
                         <td>
                             <form method="post" action="" th:object="${book}">
-                                <p>Add New Book</p>
-                                <br />
                                 <label
                                     >ISBN:<input
                                         type="text"
