--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -8,7 +8,7 @@
     <body>
         <h1 style="margin: 50px">Vendor Login</h1>
         <navbar>
-            <!--    <a th:href="@{/CustomerLogin}">Customer Login</a>-->
+            <a th:href="@{/CustomerLogin}">Customer Login</a>
             <a th:href="@{/VendorLogin}">Vendor Login</a>
         </navbar>
 
