--- a/src/main/resources/templates/CustomerLogin.html
+++ b/src/main/resources/templates/CustomerLogin.html
@@ -3,13 +3,14 @@
     <head>
         <title>Login</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
 
-    <div id="navbar">
+    <navbar>
         <a th:href="@{/CustomerLogin}">Customer Login</a>
         <a th:href="@{/VendorLogin}">Vendor Login</a>
-    </div>
+    </navbar>
 
         <h2 style="margin: 50px">Customer Login</h2>
         <form method="post" action="" th:object="${customerAccount}">
