switched to monog

--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -18,7 +18,7 @@
                     <option value="by-publisher">By Publisher</option>
                 </select> <br />
 
-                <label for="search">Search For:</label>
+                <label for="search">Search By Title:</label>
                 <input type="text" id="search" name="search" value="" /><br />
                 <input type="submit" value="Search Book" name="SearchBook"/><br />
                 <input type="submit" value="View All Books" name="AllBooks"/>
