--- a/src/main/resources/templates/SignUp.html
+++ b/src/main/resources/templates/SignUp.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
-        <h1 >Amazin Book Shop (Milestone 2):</h1>
+        <h1>Amazing Book Store</h1>
 
         <div>
             <h2>Sign Up</h2>
-            <form method="post" action="" th:object="${newAccount}">
+            <form method="post" action="/SignUp" th:object="${newAccount}">
                 <label>
                     Username:
                     <input
