no redirect with non-transient cart

--- a/src/main/resources/templates/Checkout.html
+++ b/src/main/resources/templates/Checkout.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
     <head>
-        <title>Shopping Cart</title>
+        <title>Checkout</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" th:href="@{/css/styles.css}"/>
     </head>
     <body>
-        <h1 style="margin: 50px">Shopping Cart</h1>
+        <h1 style="margin: 50px">Purchased</h1>
 
         <div style="margin: 50px">
-            should be like a list of tables here for all the books you have
+            Should just display a text of you have puchased, and how much money
+            you spent
         </div>
 
-        <button style="margin: 50px">purchase</button>
+        <button style="margin: 50px">back to main page</button>
     </body>
 </html>
