--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -73,7 +73,16 @@
                 </table>
             </div>
         </div>
-
-        <div style="margin: 50px"><button>Purchase</button></div>
+        <!--<p style="color: red" th:text="${account.cart}"></p><!-->
+        
+        <div style="margin: 50px">
+            <button 
+                    method="post" 
+                    th:action="@{/Checkout}"
+                    modelAttribute="cart" 
+                    th:object="${account.getCart()}">
+                Purchase
+            </button>
+        </div> 
     </body>
 </html>
