--- a/src/main/resources/templates/Shop.html
+++ b/src/main/resources/templates/Shop.html
@@ -65,7 +65,6 @@
                                             document.getElementById(elementId).value--;
                                         }
                                     }
-
                                 </script>
                             </td>
                         </tr>
@@ -73,14 +72,13 @@
                 </table>
             </div>
         </div>
-        <!--<p style="color: red" th:text="${account.cart}"></p><!-->
         
         <div style="margin: 50px">
             <form 
-                    method="post" 
-                    th:action="@{/Checkout}"
-                    modelAttribute="cart" 
-                    th:object="${account.getCart()}">
+                method="post" 
+                th:action="@{/Checkout}"
+                modelAttribute="account" 
+                th:object="${account}">
                 <button>Purchase</button>
             </form>
         </div> 
