--- a/src/main/resources/templates/VendorLogin.html
+++ b/src/main/resources/templates/VendorLogin.html
@@ -3,7 +3,7 @@
     <head>
         <title>Login</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+        <link rel="stylesheet" th:href="@{/css/styles.css}" />
     </head>
     <body>
         <h1 style="margin: 50px">Vendor Login</h1>
@@ -19,8 +19,8 @@
                     <input
                         type="text"
                         placeholder="Enter username"
-                        name="username"
-                /></label><br>
+                        name="username" /></label
+                ><br />
                 <label
                     >Password:
                     <input
@@ -36,7 +36,7 @@
         <div>
             <p>
                 Do not have an account? Sign up here:
-                <a th:href="@{/}">Sign Up</a>
+                <a th:href="@{/SignUp}">Sign Up</a>
             </p>
         </div>
     </body>
