--- a/src/main/resources/templates/CustomerLogin.html
+++ b/src/main/resources/templates/CustomerLogin.html
@@ -3,24 +3,41 @@
     <head>
         <title>Login</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" th:href="@{/css/styles.css}"/>
+        <link rel="stylesheet" th:href="@{/css/styles.css}" />
     </head>
     <body>
-    <h1 style="margin: 50px">Customer Login</h1>
-    <navbar>
-        <a th:href="@{/CustomerLogin}">Customer Login</a>
-        <a th:href="@{/VendorLogin}">Vendor Login</a>
-    </navbar>
+        <h1 style="margin: 50px">Customer Login</h1>
+        <navbar>
+            <a th:href="@{/CustomerLogin}">Customer Login</a>
+            <a th:href="@{/VendorLogin}">Vendor Login</a>
+        </navbar>
 
-        <form method="post" action="" th:object="${customerAccount}">
-            <label>Username: <input type="text" placeholder="Enter username" name="username"/></label><br>
-            <label>Password: <input type="text" placeholder="Enter password" name="password"/></label>
-            <p style="color: red" th:text="${loginError}"></p>
-            <input type="submit" value="Login" name="customerLogin"/>
-        </form>
+        <div style="margin: 50px">
+            <form method="post" action="" th:object="${customerAccount}">
+                <label
+                    >Username:
+                    <input
+                        type="text"
+                        placeholder="Enter username"
+                        name="username" /></label
+                ><br />
+                <label
+                    >Password:
+                    <input
+                        type="text"
+                        placeholder="Enter password"
+                        name="password"
+                /></label>
+                <p style="color: red" th:text="${loginError}"></p>
+                <input type="submit" value="Login" name="customerLogin" />
+            </form>
+        </div>
 
-    <div>
-        <p>Do Not have an Account? Sign up Here: <a th:href="@{/SignUp}">Sign Up</a> </p>
-    </div>
+        <div>
+            <p>
+                Do not have an account? Sign up here:
+                <a th:href="@{/SignUp}">Sign Up</a>
+            </p>
+        </div>
     </body>
 </html>
